<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.lenze.nupano.suite</groupId>
  <artifactId>nupano-suite-testautomation</artifactId>
  <version>1.0</version>
  <packaging>jar</packaging>

  <name>Lenze NUPANO Suite Test Automation Framework</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <serenity.core.version>4.2.3</serenity.core.version>
    <serenity.cucumber.version>4.1.14</serenity.cucumber.version>
    <assertJ.version>3.26.3</assertJ.version>
    <logback.version>1.5.10</logback.version>
    <maven.plugins.version>3.5.1</maven.plugins.version>
    <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
    <junit.platform.launcher.version>1.11.1</junit.platform.launcher.version>
    <cucumber.junit.platform.engine.version>7.19.0</cucumber.junit.platform.engine.version>
    <junit.jupiter.engine.version>5.11.1</junit.jupiter.engine.version>

    <label></label>
    <suite_url></suite_url>
    <encoding>UTF-8</encoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>net.serenity-bdd</groupId>
      <artifactId>serenity-core</artifactId>
      <version>${serenity.core.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.serenity-bdd</groupId>
      <artifactId>serenity-junit5</artifactId>
      <version>${serenity.core.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.serenity-bdd</groupId>
      <artifactId>serenity-cucumber</artifactId>
      <version>${serenity.core.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.serenity-bdd</groupId>
      <artifactId>serenity-screenplay</artifactId>
      <version>${serenity.core.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.serenity-bdd</groupId>
      <artifactId>serenity-screenplay-rest</artifactId>
      <version>${serenity.core.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.serenity-bdd</groupId>
      <artifactId>serenity-screenplay-webdriver</artifactId>
      <version>${serenity.core.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.serenity-bdd</groupId>
      <artifactId>serenity-ensure</artifactId>
      <version>${serenity.core.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertJ.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.11.0</version>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-suite</artifactId>
      <version>${junit.platform.launcher.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>${junit.platform.launcher.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-junit-platform-engine</artifactId>
      <version>${cucumber.junit.platform.engine.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.jupiter.engine.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <version>${junit.jupiter.engine.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.jupiter.engine.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.microsoft.azure</groupId>
      <artifactId>msal4j</artifactId>
      <version>1.25.1</version>
    </dependency>
    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjweaver</artifactId>
      <version>1.9.24</version>
    </dependency>
    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjrt</artifactId>
      <version>1.9.24</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>dev.aspectj</groupId>
        <artifactId>aspectj-maven-plugin</artifactId>
        <version>1.14.1</version>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjtools</artifactId>
            <version>1.9.24</version>
          </dependency>
        </dependencies>
        <configuration>
          <complianceLevel>21</complianceLevel>
          <source>21</source>
          <target>21</target>

          <showWeaveInfo>true</showWeaveInfo>
          <verbose>true</verbose>
          <weaveDirectories>
            <weaveDirectory>${project.build.outputDirectory}</weaveDirectory>
          </weaveDirectories>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>test-compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.plugins.version}</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven.plugins.version}</version>
        <configuration>
          <includes>
            <include>**/*TestSuite.java</include>
          </includes>

          <systemPropertyVariables>
            <tags>${label}</tags>
            <cucumber.plugin>pretty, io.cucumber.core.plugin.SerenityReporterParallel, timeline:report/serenity-results/timeline, json:report/cucumber-reports/cucumber-${label}.json, html:report/cucumber-reports/cucumber-${label}.html</cucumber.plugin>
          </systemPropertyVariables>

          <parallel>none</parallel>
          <useUnlimitedThreads>false</useUnlimitedThreads>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>
            <arg>-Xlint:deprecation</arg>
            <arg>-Xlint:unchecked</arg>
          </compilerArgs>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-junit-platform</artifactId>
            <version>3.5.1</version>
          </dependency>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-engine</artifactId>
            <version>1.9.3</version>
          </dependency>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>1.9.3</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>net.serenity-bdd.maven.plugins</groupId>
        <artifactId>serenity-maven-plugin</artifactId>
        <version>${serenity.core.version}</version>
        <executions>
          <execution>
            <id>check-gherkin</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>check-gherkin</goal>
            </goals>
          </execution>
          <execution>
            <id>serenity-reports</id>
            <phase>post-integration-test</phase>
            <goals>
              <goal>aggregate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>tech.grasshopper</groupId>
        <artifactId>cucumber-pdf-plugin</artifactId>
        <version>1.14.0</version>
        <executions>
          <execution>
            <id>report</id>
            <phase>post-integration-test</phase>
            <goals>
              <goal>pdfreport</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <cucumberJsonReportDirectory>${project.basedir}/report/cucumber-reports</cucumberJsonReportDirectory>
          <cucumberPdfReportDirectory>${project.basedir}/report/release-report</cucumberPdfReportDirectory>
          <cucumberPdfReportDirectoryTimeStamp>null</cucumberPdfReportDirectoryTimeStamp>
          <title>Lenze Test Suite QA Release Report</title>
          <displayScenario>false</displayScenario>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>